--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
     </head>
 <body>
     <div class="container">
-        <h2 >apeal </h2>
+        <h2 class="text-center" > Appeal </h2>
         <div class="row mb-3">
             
             <div class="col-8">
