added fulll automatic

--- a/app.html
+++ b/app.html
@@ -77,6 +77,10 @@
               <div class="col-4"><button  class="btn btn-success" id="apeal">Appeal</button></div>
               <div class="col-4"><button  class="btn btn-warning" id="config" >Config</button></div>
         </div>
+        <div class="row mb-3">
+            <div class="col-4"><button  class="btn btn-danger" id="auto">Auto</button></div>
+            
+      </div>
           
     </div>
 
